argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations: {}
   # cert-manager.io/issuer: ca-issuer
spec:
  ingressClassName: cilium
  rules:
    - host: argocd.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - argocd.homelab
  #     secretName: argocd-cert
